--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ h2{
 <h1>Mystic</h1>
 <div class="subtitle" data-i18n="subtitle">Developer & Game Tester</div>
 <p class="description" data-i18n="desc">
-Developer and game tester providing structured playtesting, bug reports, and gameplay feedback.
+French developer and game tester providing structured playtesting, bug reports, and gameplay feedback.
 </p>
 </div>
 </section>
@@ -369,7 +369,7 @@ Developer and game tester providing structured playtesting, bug reports, and gam
 <h2 data-i18n="about">About</h2>
 <p class="description" data-i18n="aboutText">
 I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback.
-My technical knowledge allows clear communication with developers and actionable testing results.
+My technical knowledge allows me to read and understand code, thus helping other developers through playtesting.
 </p>
 </section>
 
@@ -482,12 +482,12 @@ const dict={
   contact:["Contact","Contact"],
   subtitle:["Developer & Game Tester","Développeur & Testeur de jeux"],
   desc:[
-    "Developer and game tester providing structured playtesting, bug reports, and gameplay feedback.",
-    "Développeur et testeur de jeux fournissant des playtests structurés, rapports de bugs et retours de gameplay."
+    "French developer and game tester providing structured playtesting, bug reports, and gameplay feedback.",
+    "Développeur français et testeur de jeux fournissant des playtests structurés, rapports de bugs et retours de gameplay."
   ],
   aboutText:[
-    "I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback. My technical knowledge allows clear communication with developers and actionable testing results.",
-    "Je suis développeur et testeur de jeux, spécialisé dans le playtesting, les rapports de bugs et les retours de gameplay. Mes connaissances me permettent de lire et comprendre du code, afin de pouvoir aider d'autres développeurs lors de Playtesting, sans avoir forcément besoin du code."
+    "I am a developer and game tester focused on playtesting, bug reporting, and gameplay feedback. My technical knowledge allows me to read and understand code, thus helping other developers through playtesting.",
+    "Je suis développeur et testeur de jeux, spécialisé dans le playtesting, les rapports de bugs et les retours de gameplay. Mes connaissances me permettent de lire et comprendre du code, afin de pouvoir aider d'autres développeurs lors de Playtesting."
   ],
   testing:["Game Testing","Tests de jeux"],
   mods:["Mods","Mods"],
