--- a/index.html
+++ b/index.html
@@ -451,8 +451,8 @@ Lethal Company mod that syncs the cruiser between players.
 <section id="other">
 <h2 data-i18n="other">Other</h2>
 <div class="other-grid">
-<p data-i18n="b2">Certified B2 English level</p>
-<p data-i18n="algorea">Reached National Quarter-Finals of Concours Algoréa twice (Scratch)</p>
+<p data-i18n="b2">Certified Cambridge B2 English level</p>
+<p data-i18n="algorea">Reached Quarter-Finals of national contest Algoréa twice (Scratch)</p>
 <p data-i18n="ai">I use AI to assist with coding</p>
 <p data-i18n="german">I speak a bit of German</p>
 </div>
@@ -519,8 +519,8 @@ const dict = {
   nrp:["Lethal Company performance mod removing rain particle effects.","Mod de performance pour Lethal Company supprimant les particules de pluie."],
   bcs:["Lethal Company mod that syncs the cruiser between players.","Mod de synchronisation du camion entre les joueurs sur Lethal Company."],
   email:["Email","Email"],
-  b2:["Certified B2 English level","Certification anglais B2"],
-  algorea:["Reached National Quarter-Finals of Concours Algoréa twice (Scratch)","Quart de finale national Concours Algoréa deux fois (Scratch)"],
+  b2:["Certified Cambridge B2 English level","Certification anglais B2"],
+  algorea:["Reached Quarter-Finals of national contest Algoréa twice (Scratch)","Quart de finale du Concours Algoréa national deux fois (Scratch)"],
   ai:["I use AI to assist with coding","J'utilise l'IA pour m'aider à coder"],
   german:["I speak a bit of German","Je parle un peu allemand"]
 };
