--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 <title>Mystic's Portfolio</title>
 
 <style>
@@ -13,6 +14,10 @@ body{
   background:#05060a;
   color:#fff;
   overflow-x:hidden;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 /* ================= BACKGROUND CORE ================= */
@@ -467,6 +472,9 @@ Lethal Company mod that syncs the cruiser between players.
 </div>
 <div>
 <p>Discord</p>
+  <a href="https://discord.com/users/858353168701718538" data-i18n="discord">
+Add on Discord
+  </a>
 <p>@_mystik<br><small>858353168701718538</small></p>
 </div>
 </div>
@@ -522,7 +530,8 @@ const dict = {
   b2:["Certified Cambridge B2 English level","Certification anglais B2"],
   algorea:["Reached Quarter-Finals of national contest Algoréa twice (Scratch)","Quart de finale du Concours Algoréa national deux fois (Scratch)"],
   ai:["I use AI to assist with coding","J'utilise l'IA pour m'aider à coder"],
-  german:["I speak a bit of German","Je parle un peu allemand"]
+  german:["I speak a bit of German","Je parle un peu allemand"],
+  discord:["Add on Discord","M'ajouter sur Discord"
 };
 
 // Function to apply language
