--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ const dict = {
   algorea:["Reached Quarter-Finals of national contest Algoréa twice (Scratch)","Quart de finale du Concours Algoréa national deux fois (Scratch)"],
   ai:["I use AI to assist with coding","J'utilise l'IA pour m'aider à coder"],
   german:["I speak a bit of German","Je parle un peu allemand"],
-  discord:["Add on Discord","M'ajouter sur Discord"
+  discord:["Add on Discord","M'ajouter sur Discord"]
 };
 
 // Function to apply language
